<resources>
    <string name="app_name">TokopediaHomepage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_official_store">Official Store</string>
    <string name="title_feed">Feed</string>
    <string name="title_transaction">Transaksi</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="send_to">Dikirim ke</string>
    <string name="dummy_balance_gopay">Rp102.500</string>
    <string name="dummy_gopay_coins">74.039 coins</string>
    <string name="gopay_balance">Gopay balance</string>
    <string name="dummy_member_silver">Member Silver</string>
    <string name="dummy_member_coupon">31 Kupon</string>
    <string name="service_s_icon">Service\'s Icon</string>
    <string name="promo">Promo</string>
    <string name="video_recommendation">Video menarik untukmu</string>
    <string name="see_all">Lihat Semua</string>
    <string name="live_thumbnail">Live Thumbnail</string>
    <string name="dummy_search_query">Cari laptop</string>
    <string name="search_icon">Search Icon</string>
    <string name="segera_habis">Segera Habis</string>
    <string name="product_image">Product Image</string>
    <string name="kejar_diskon_spesial">Kejar Diskon Spesial</string>
    <string name="berakhir_dalam">Berakhir dalam</string>
    <string name="dummy_discount_countdown">00 : 43 : 51</string>
    <string name="dummy_discount">65%</string>
    <string name="price">Rp %d</string>
</resources>