<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wiryadev.tokopediahomepage.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.wiryadev.tokopediahomepage.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_official_store"
        android:name="com.wiryadev.tokopediahomepage.ui.official_store.OfficialStoreFragment"
        android:label="@string/title_official_store"
        tools:layout="@layout/fragment_official_store" />
    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.wiryadev.tokopediahomepage.ui.wishlist.WishlistFragment"
        android:label="@string/title_official_store"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.wiryadev.tokopediahomepage.ui.transaction.TransactionFragment"
        android:label="@string/title_official_store"
        tools:layout="@layout/fragment_transaction" />

</navigation>