<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="@dimen/default_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="8dp"
            android:paddingHorizontal="12dp">

            <ImageView
                android:id="@+id/iv_go_pay"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/gopay_balance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_gopay_default" />

            <TextView
                android:id="@+id/tv_gopay_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/dummy_balance_gopay"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/iv_go_pay"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_gopay_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_gopay_coins"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_gopay_balance"
                app:layout_constraintTop_toBottomOf="@id/tv_gopay_balance" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="8dp"
            android:paddingHorizontal="12dp">

            <ImageView
                android:id="@+id/iv_member"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/gopay_balance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_member_silver" />

            <TextView
                android:id="@+id/tv_member_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/dummy_member_silver"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/iv_member"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_member_coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_member_coupon"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_member_level"
                app:layout_constraintTop_toBottomOf="@id/tv_member_level" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>